# perturb-eval-notebooks

./: .gitignore  01_figure1.ipynb  02_table1_mechanism_summary.ipynb  03_table2_gears_scope.ipynb  04_appendix_threshold_sensitivity.ipynb  05_metric_robustness.ipynb  CITATION.cff  D01_replogle_atlases.ipynb  D02_severity_references.ipynb  D03_holdout_specifications.ipynb  MANUSCRIPT_TRACEABILITY.md  P01_train_cpa.ipynb  P02_train_gears.ipynb  P03_evaluate_severity.ipynb  P04_loo_and_winsorisation.ipynb  README.md  TRAINING_PROVENANCE.md  perturb_style.py  pyproject.toml  run_all.sh
precomputed/: README.md
precomputed/eval/: diag_alttargets_n100.csv  diag_alttargets_n100_summary.csv  diag_loo_sensitivity_gears.csv  diag_loo_sensitivity_n100.csv  diag_spearman_n100.csv  diag_spearman_n100_summary.csv  diag_winsorise_n100.csv  diag_winsorise_n100_summary.csv  gears_cpa_mechanism_comparison.csv  gears_cpa_mechanism_comparison.md  stage5_comparison_n100.csv
precomputed/figure_inputs/: bootstrap_ci_summary.csv  figure1_panel_summary.csv
precomputed/holdout_specs/: holdout_specs.csv
precomputed/tables/: appendix_a_threshold_sensitivity.csv  table1_mechanism_summary.csv  table2_gears_matched_n.csv
scripts/: evaluate_severity_panel.py  recompute_diagnostics.py
src/perturb_eval/: __init__.py  data.py  holdouts.py  loo.py  plotting.py  severity.py  train_cpa.py  train_gears.py  winsorise.py
