[project]
name = "perturb-eval-notebooks"
version = "0.1.0"
description = "Reproducibility notebooks for: Single-shot perturbation benchmarks can mislead: diagnostics for split- and metric-driven instability in single-cell model evaluation"
authors = [
    { name = "Justin P. Whalley", email = "justin.whalley@rosalindfranklin.edu" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"

dependencies = [
    # ── Core (all notebooks) ─────────────────────────────────────────────────
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "tqdm",
    "requests",
    "jupyter",
    "ipykernel",

    # ── Single-cell data handling ─────────────────────────────────────────────
    "anndata",
    "scanpy",

    # ── Resolver pins to avoid known build failures ───────────────────────────
    # pyyaml 5.4.1 has an incompatible setup.py (cython_sources AttributeError
    # under modern Cython/setuptools). Forcing >=6.0 picks a version with
    # pre-built wheels. donfig/zarr/anndata are happy with either.
    "pyyaml>=6.0",
]

[project.optional-dependencies]

# CPA training group — only required for full P01 training.
# Reproducibility flows that use precomputed CSVs do not need this.
cpa = [
    "torch>=2.3.0,<2.4",
    "pytorch-lightning",
    "scvi-tools",
    "cpa-tools",
]

# GEARS training group — only required for full P02 training.
gears = [
    "torch>=2.3.0,<2.4",
    "torch-geometric",
    "cell-gears",
]

# Data-acquisition group — only required for D01 (atlas download) and D02
# (Replogle supplementary Excel read). Figure-only readers do not need this.
data = [
    "pertpy",
    "openpyxl",
]

# Development tooling
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/perturb_eval"]
